--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
     "watch": "tsx watch src/index.ts",
     "standalone": "tsx src/standalone-server.ts",
     "standalone:build": "tsc && node dist/standalone-server.js",
-    "standalone:dev": "tsx watch src/standalone-server.ts"
+    "standalone:dev": "tsx watch src/standalone-server.ts",
+    "http": "tsx src/http-server.ts",
+    "http:build": "tsc && node dist/http-server.js",
+    "http:dev": "tsx watch src/http-server.ts",
+    "test:http": "node test-http-client.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
     "zod": "^3.25.76",
-    "dotenv": "^17.2.2"
+    "dotenv": "^17.2.2",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
     "typescript": "^5.8.3",
     "tsx": "^4.7.0"
   },
